@@ -7,4 +7,4 @@ macro_def_not_closed.texi(,7) @macro the_macro {arg1, arg2}
 macro_def_not_closed.texi(,8) 
 macro_def_not_closed.texi(,9) Macro body
 macro_def_not_closed.texi(,10) 
-no file(,) @end macro
+macro_def_not_closed.texi( end of file,11) @end macro
