@@ -105,6 +105,7 @@ part_node_part_appendix part_node_part_appendix.texi
 part_node_part_node_appendix part_node_part_node_appendix.texi
 part_node_node_part_appendix part_node_node_part_appendix.texi
 empty_top_node_up menu-whitespace.texi --set-init-var TOP_NODE_UP
+#text_before_line_command text_before_line_command.texi
 
 test_refs_docbook test_refs.texi --docbook
 at_commands_in_refs_info at_commands_in_refs.texi --init info.init
